# microbit_rust

./: Cargo.toml  Embed.toml  README.md
src/: led_matrix.rs  uart_echo.rs
