[package]
authors = ["maltsev-dev"]
keywords = ["embedded", "nrf52833", "microbit", "embedded-hal"]
description = "Rust firmware projects with BBC micro:bit V2.21"
license = "MIT OR Apache-2.0"
name = "microbit_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
nrf52833-hal = "0.18.0"
panic-halt = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm"]

